--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 <body>
     <header>
-        <div>
+        <div class="fijarMenu">
             <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
                 <div class="container-fluid navegadorBox">
                     <div class="navegadorLogo">
@@ -57,10 +57,11 @@
                 </div>
             </nav>
         </div>
-        <div class="navbar-dark bg-dark ">
-            <h1>Bienvenido a Clínica JMR</h1>
+        <div class="tituloPpal">
+            <div class="tituloAlineado">
+                <h1>Bienvenido a Clínica JMR</h1>
+            </div>
         </div>
-
 
     </header>
     <main>
