primer section de inicio terminado en grueso, falta ajustar modo mobile ss

--- a/index.html
+++ b/index.html
@@ -67,30 +67,30 @@
     <main>
         <section>
             <div class="cajaX3">
-                <div class="card" style="width: 25rem;">
-                    <img src="./img/" class="card-img-top" alt="...">
+                <div class="card" style="width: 18rem;">
+                    <img src="img/turnos.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">Turnos</h5>
-                        <p class="card-text">Si Ud. desea gestionar un turno on line, puede hacerlo desde aquí, ingresando al enlace que se encuentra en la parte inferior</p>
-                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                        <p class="card-text">Si Ud. desea gestionar un turno on line, puede hacerlo desde aquí, ingresando al enlace que se encuentra en la parte inferior
+                            <img src="img/dedo-click.png" alt="">
+                        </p>
+                        <a href="#" class="btn btn-primary">Su Turno Aquí</a>
                     </div>
                 </div>
-                <div class="card" style="width: 25rem;">
-                    <img src="..." class="card-img-top" alt="...">
+                <div class="card" style="width: 18rem;">
+                    <img src="img/estetoscopio.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
-                            the card's content.</p>
-                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                        <h5 class="card-title">Especialistas</h5>
+                        <p class="card-text">Si Ud. desea buscar un medicio o especialista, puede ingresar directamente desde aquí, y seleccionar el profesional de su interes.</p>
+                        <a href="#" class="btn btn-primary">Cuerpo Médico</a>
                     </div>
                 </div>
-                <div class="card" style="width: 25rem;">
-                    <img src="..." class="card-img-top" alt="...">
+                <div class="card" style="width: 18rem;">
+                    <img src="img/agenda.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
-                            the card's content.</p>
-                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                        <h5 class="card-title">Horarios</h5>
+                        <p class="card-text">Si Ud. desea conocer los días y horarios de los consultorios externos, o si necesita saber los horarios de visita para internación, ingrese aquí.</p>
+                        <a href="#" class="btn btn-primary">Horarios</a>
                     </div>
                 </div>
             </div>
