agregando segunda seccion de main en el index, crear archivo querys.scss s

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <header>
         <div class="fijarMenu">
             <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-                <div class="container-fluid navegadorBox">
+                <div class="container navegadorBox">
                     <div class="navegadorLogo">
                         <a class="navbar-brand" href="./index.html">
                             <img src="./img/hospital.png" alt="" width="40" height="32">Clínica JMR</a>
@@ -71,36 +71,66 @@
                     <img src="img/turnos.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">Turnos</h5>
-                        <p class="card-text">Si Ud. desea gestionar un turno on line, puede hacerlo desde aquí, ingresando al enlace que se encuentra en la parte inferior
+                        <p class="card-text">Si Ud. desea gestionar un turno on line, puede hacerlo desde aquí,
+                            ingresando al enlace que se encuentra en la parte inferior
                             <img src="img/dedo-click.png" alt="">
                         </p>
-                        <a href="#" class="btn btn-primary">Su Turno Aquí</a>
+                        <a href="#" class="btn btn-dark">Su Turno Aquí</a>
                     </div>
                 </div>
                 <div class="card" style="width: 18rem;">
                     <img src="img/estetoscopio.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">Especialistas</h5>
-                        <p class="card-text">Si Ud. desea buscar un medicio o especialista, puede ingresar directamente desde aquí, y seleccionar el profesional de su interes.</p>
-                        <a href="#" class="btn btn-primary">Cuerpo Médico</a>
+                        <p class="card-text">Si Ud. desea buscar un medico o especialista, puede ingresar desde aquí, y seleccionar el profesional de su interes.</p>
+                        <a href="#" class="btn btn-dark">Cuerpo Médico</a>
                     </div>
                 </div>
                 <div class="card" style="width: 18rem;">
                     <img src="img/agenda.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">Horarios</h5>
-                        <p class="card-text">Si Ud. desea conocer los días y horarios de los consultorios externos, o si necesita saber los horarios de visita para internación, ingrese aquí.</p>
-                        <a href="#" class="btn btn-primary">Horarios</a>
+                        <p class="card-text">Puede consultar los días y horarios de los consultorios externos, o conocer los horarios de visita para internación, ingrese aquí.</p>
+                        <a href="#" class="btn btn-dark">Horarios</a>
                     </div>
                 </div>
             </div>
+        </section>
 
+        <section>
+            <div class="cajaX3">
+                <div class="card mb-3" style="max-width: 540px;">
+                    <div class="row g-0 bordes">
+                        <div class="col-md-4">
+                            <img src="img/recetas.jpg" class="img-fluid rounded-start" alt="...">
+                        </div>
+                        <div class="col-md-8">
+                            <div class="card-body">
+                                <h5 class="card-title">Recetas en línea</h5>
+                                <p class="card-text">Para gestionar sus recetas en forma on line, vamos a solicitarle que complete el formulario, y luego de 24hs Ud. podrá bajar el archivo correspondiente.</p>
+                                <p class="card-text"><button type="button" class="btn btn-dark">Formulario Recetas</button></p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="card mb-3" style="max-width: 540px;">
+                    <div class="row g-0 bordes">
+                        <div class="col-md-4">
+                            <img src="img/chat-medico.jpg" class="img-fluid rounded-start" alt="...">
+                        </div>
+                        <div class="col-md-8">
+                            <div class="card-body">
+                                <h5 class="card-title">Médico Virtual</h5>
+                                <p class="card-text">Médico virtual se encuentra habilitado de lunes a sábado, en horario corrido de 09:00 a 21:00hs, si Ud. tiene una urgencia, recuerde acercarse al servicio de guardia.</p>
+                                <p class="card-text"><button type="button" class="btn btn-dark">Ingresar a chat Médico</button></p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </section>
         <section>
-
-        </section>
-        <section>
-
+        
         </section>
         <section>
 
