agregando el footer y el main completo, aun falta dar estilos

--- a/index.html
+++ b/index.html
@@ -66,6 +66,9 @@
 
     <main>
         <section>
+            <div class="subtitulos" >
+                <h2>Busquedas frecuentes</h2>
+            </div>
             <div class="cajaX3">
                 <div class="card" style="width: 18rem;">
                     <img src="img/turnos.jpg" class="card-img-top" alt="...">
@@ -73,7 +76,6 @@
                         <h5 class="card-title">Turnos</h5>
                         <p class="card-text">Si Ud. desea gestionar un turno on line, puede hacerlo desde aquí,
                             ingresando al enlace que se encuentra en la parte inferior
-                            <img src="img/dedo-click.png" alt="">
                         </p>
                         <a href="#" class="btn btn-dark">Su Turno Aquí</a>
                     </div>
@@ -98,6 +100,9 @@
         </section>
 
         <section>
+            <div class="subtitulos">
+                <h2>Gestiones en línea</h2>
+            </div>
             <div class="cajaX3">
                 <div class="card mb-3" style="max-width: 540px;">
                     <div class="row g-0 bordes">
@@ -129,18 +134,88 @@
                 </div>
             </div>
         </section>
-        <section>
-        
-        </section>
-        <section>
 
+        <section>
+            <div class="subtitulos">
+                <h2>Noticias y Novedades</h2>
+            </div>
+            <div>
+                <div class="card-group">
+                    <div class="card">
+                      <img src="img/deporte.jpg" class="card-img-top" alt="...">
+                      <div class="card-body">
+                        <h5 class="card-title">Realizar actividad física:</h5>
+                        <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corrupti commodi eum magni error expedita sit necessitatibus cumque explicabo sed quae.</p>
+                        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                      </div>
+                    </div>
+                    <div class="card">
+                      <img src="img/laboratorio.jpg" class="card-img-top" alt="...">
+                      <div class="card-body">
+                        <h5 class="card-title">Laboratorio Propio</h5>
+                        <p class="card-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ullam deserunt culpa repudiandae! Assumenda corrupti asperiores delectus dolores, dicta commodi distinctio?</p>
+                        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                      </div>
+                    </div>
+                    <div class="card">
+                      <img src="img/verduras.jpg" class="card-img-top" alt="...">
+                      <div class="card-body">
+                        <h5 class="card-title">Alimentación sana</h5>
+                        <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quisquam placeat similique voluptates facilis cupiditate ullam nesciunt eveniet explicabo nihil iste.</p>
+                        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                      </div>
+                    </div>
+                  </div>
+            </div>
+        </section>
+
+        <section>
+            <div class="seccion4">
+                <div class="mapa">
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d8895.425500268724!2d-57.54949116960035!3d-37.9769462012337!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses!2sar!4v1630785092533!5m2!1ses!2sar" width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                </div>
+
+                <div class="redSocial">
+                    <div class="imgRedSocial">
+                       <img src="img/instagramColor.png" class="iconos" alt="Instagram">
+                    </div>
+                    <div class="txtRedSocial">
+                       <a href=""><img src="img/dedo-click.png" class="dedoClick" alt="imagen dedo haciendo click"> - Instagram</a>
+                    </div>
+                    
+                    <div class="imgRedSocial">
+                       <img src="img/facebookColor.png" class="iconos" alt="Facebook">
+                    </div>
+
+                    <div class="txtRedSocial">
+                       <a href=""><img src="img/dedo-click.png" class="dedoClick" alt="imagen dedo haciendo click"> - Facebook</a>
+                    </div>
+
+                    <div class="imgRedSocial">
+                       <img src="img/linkedinColor.png" class="iconos" alt="LinkedIn">
+                    </div>
+
+                    <div class="txtRedSocial">
+                       <a href=""><img src="img/dedo-click.png" class="dedoClick" alt="imagen dedo haciendo click"> - LinkedIn</a>
+                    </div>                    
+                </div>
+            </div>
         </section>
 
     </main>
-    <footer>
-
+    <footer class="bg-dark">
+        <div class="boxFooter">
+            <div>
+                <span>Derechos reservados - Cllínica JMR - 2021</span>
+            </div>
+            <div>
+                <img class="imgFooter" src="img/facebook.png" alt="">
+                <img class="imgFooter" src="img/instagram.png" alt="">
+                <img class="imgFooter" src="img/linkedin.png" alt="">
+                <img class="imgFooter" src="img/twitter.png" alt="">
+            </div>
+        </div>
     </footer>
-
 
     <script src="../bootstrap-5.1.0-dist/js/bootstrap.js"></script>
 </body>
