corrigiendo estilos en general ompleto, aun falta dar estilos

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
             <div class="subtitulos">
                 <h2>Gestiones en línea</h2>
             </div>
-            <div class="cajaX3">
+            <div class="cajaX2">
                 <div class="card mb-3" style="max-width: 540px;">
                     <div class="row g-0 bordes">
                         <div class="col-md-4">
@@ -170,6 +170,9 @@
         </section>
 
         <section>
+            <div class="subtitulos">
+                <h2>Ubicación y Redes Sociales</h2>
+            </div>
             <div class="seccion4">
                 <div class="mapa">
                     <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d8895.425500268724!2d-57.54949116960035!3d-37.9769462012337!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses!2sar!4v1630785092533!5m2!1ses!2sar" width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
@@ -205,10 +208,10 @@
     </main>
     <footer class="bg-dark">
         <div class="boxFooter">
-            <div>
+            <div class="boxFooterTxt">
                 <span>Derechos reservados - Cllínica JMR - 2021</span>
             </div>
-            <div>
+            <div class="boxFooterImg">
                 <img class="imgFooter" src="img/facebook.png" alt="">
                 <img class="imgFooter" src="img/instagram.png" alt="">
                 <img class="imgFooter" src="img/linkedin.png" alt="">
