sigo trabajando en los estilos de la pagina inicio ar estilos

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                 <h2>Busquedas frecuentes</h2>
             </div>
             <div class="cajaX3">
-                <div class="card" style="width: 18rem;">
+                <div class="card bordes" style="width: 18rem;">
                     <img src="img/turnos.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">Turnos</h5>
@@ -80,7 +80,7 @@
                         <a href="#" class="btn btn-dark">Su Turno Aquí</a>
                     </div>
                 </div>
-                <div class="card" style="width: 18rem;">
+                <div class="card bordes" style="width: 18rem;">
                     <img src="img/estetoscopio.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">Especialistas</h5>
@@ -88,7 +88,7 @@
                         <a href="#" class="btn btn-dark">Cuerpo Médico</a>
                     </div>
                 </div>
-                <div class="card" style="width: 18rem;">
+                <div class="card bordes" style="width: 18rem;">
                     <img src="img/agenda.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">Horarios</h5>
@@ -219,6 +219,11 @@
             </div>
         </div>
     </footer>
+
+    <script src="../bootstrap-5.1.0-dist/js/bootstrap.js"></script>
+</body>
+
+</html>footer>
 
     <script src="../bootstrap-5.1.0-dist/js/bootstrap.js"></script>
 </body>
