Agregando pagina especialistas de la pagina inicio ar estilos

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8">
@@ -16,7 +16,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
 
-    <title>Clínica JMR</title>
+    <title>Clínica JMR | Inicio</title>
 </head>
 
 <body>
@@ -61,12 +61,17 @@
             <div class="tituloAlineado">
                 <h1>Bienvenido a Clínica JMR</h1>
             </div>
+            <div class="wave" style="height: 150px; overflow: hidden;"><svg viewBox="0 0 500 150"
+                    preserveAspectRatio="none" style="height: 100%; width: 100%;">
+                    <path d="M-4.79,36.02 C148.69,152.45 330.41,152.45 502.54,38.97 L501.41,154.44 L0.00,150.00 Z"
+                        style="stroke: none; fill: white;"></path>
+                </svg></div>
         </div>
     </header>
 
     <main>
         <section>
-            <div class="subtitulos" >
+            <div class="subtitulos">
                 <h2>Busquedas frecuentes</h2>
             </div>
             <div class="cajaX3">
@@ -84,7 +89,8 @@
                     <img src="img/estetoscopio.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">Especialistas</h5>
-                        <p class="card-text">Si Ud. desea buscar un medico o especialista, puede ingresar desde aquí, y seleccionar el profesional de su interes.</p>
+                        <p class="card-text">Si Ud. desea buscar un medico o especialista, puede ingresar desde aquí, y
+                            seleccionar el profesional de su interes.</p>
                         <a href="#" class="btn btn-dark">Cuerpo Médico</a>
                     </div>
                 </div>
@@ -92,7 +98,8 @@
                     <img src="img/agenda.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">Horarios</h5>
-                        <p class="card-text">Puede consultar los días y horarios de los consultorios externos, o conocer los horarios de visita para internación, ingrese aquí.</p>
+                        <p class="card-text">Puede consultar los días y horarios de los consultorios externos, o conocer
+                            los horarios de visita para internación, ingrese aquí.</p>
                         <a href="#" class="btn btn-dark">Horarios</a>
                     </div>
                 </div>
@@ -112,8 +119,11 @@
                         <div class="col-md-8">
                             <div class="card-body">
                                 <h5 class="card-title">Recetas en línea</h5>
-                                <p class="card-text">Para gestionar sus recetas en forma on line, vamos a solicitarle que complete el formulario, y luego de 24hs Ud. podrá bajar el archivo correspondiente.</p>
-                                <p class="card-text"><button type="button" class="btn btn-dark">Formulario Recetas</button></p>
+                                <p class="card-text">Para gestionar sus recetas en forma on line, vamos a solicitarle
+                                    que complete el formulario, y luego de 24hs Ud. podrá bajar el archivo
+                                    correspondiente.</p>
+                                <p class="card-text"><button type="button" class="btn btn-dark">Formulario
+                                        Recetas</button></p>
                             </div>
                         </div>
                     </div>
@@ -126,8 +136,11 @@
                         <div class="col-md-8">
                             <div class="card-body">
                                 <h5 class="card-title">Médico Virtual</h5>
-                                <p class="card-text">Médico virtual se encuentra habilitado de lunes a sábado, en horario corrido de 09:00 a 21:00hs, si Ud. tiene una urgencia, recuerde acercarse al servicio de guardia.</p>
-                                <p class="card-text"><button type="button" class="btn btn-dark">Ingresar a chat Médico</button></p>
+                                <p class="card-text">Médico virtual se encuentra habilitado de lunes a sábado, en
+                                    horario corrido de 09:00 a 21:00hs, si Ud. tiene una urgencia, recuerde acercarse al
+                                    servicio de guardia.</p>
+                                <p class="card-text"><button type="button" class="btn btn-dark">Ingresar a chat
+                                        Médico</button></p>
                             </div>
                         </div>
                     </div>
@@ -139,33 +152,38 @@
             <div class="subtitulos">
                 <h2>Noticias y Novedades</h2>
             </div>
-            <div>
+            <div class="cajaX3">
                 <div class="card-group">
                     <div class="card">
-                      <img src="img/deporte.jpg" class="card-img-top" alt="...">
-                      <div class="card-body">
-                        <h5 class="card-title">Realizar actividad física:</h5>
-                        <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corrupti commodi eum magni error expedita sit necessitatibus cumque explicabo sed quae.</p>
-                        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-                      </div>
+                        <img src="img/deporte.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Realizar actividad física:</h5>
+                            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corrupti
+                                commodi eum magni error expedita sit necessitatibus cumque explicabo sed quae.</p>
+                            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                        </div>
                     </div>
                     <div class="card">
-                      <img src="img/laboratorio.jpg" class="card-img-top" alt="...">
-                      <div class="card-body">
-                        <h5 class="card-title">Laboratorio Propio</h5>
-                        <p class="card-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ullam deserunt culpa repudiandae! Assumenda corrupti asperiores delectus dolores, dicta commodi distinctio?</p>
-                        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-                      </div>
+                        <img src="img/laboratorio.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Laboratorio Propio</h5>
+                            <p class="card-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ullam
+                                deserunt culpa repudiandae! Assumenda corrupti asperiores delectus dolores, dicta
+                                commodi distinctio?</p>
+                            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                        </div>
                     </div>
                     <div class="card">
-                      <img src="img/verduras.jpg" class="card-img-top" alt="...">
-                      <div class="card-body">
-                        <h5 class="card-title">Alimentación sana</h5>
-                        <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quisquam placeat similique voluptates facilis cupiditate ullam nesciunt eveniet explicabo nihil iste.</p>
-                        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-                      </div>
+                        <img src="img/verduras.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Alimentación sana</h5>
+                            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quisquam
+                                placeat similique voluptates facilis cupiditate ullam nesciunt eveniet explicabo nihil
+                                iste.</p>
+                            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                        </div>
                     </div>
-                  </div>
+                </div>
             </div>
         </section>
 
@@ -175,56 +193,56 @@
             </div>
             <div class="seccion4">
                 <div class="mapa">
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d8895.425500268724!2d-57.54949116960035!3d-37.9769462012337!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses!2sar!4v1630785092533!5m2!1ses!2sar" width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                    <iframe
+                        src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d8895.425500268724!2d-57.54949116960035!3d-37.9769462012337!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses!2sar!4v1630785092533!5m2!1ses!2sar"
+                        width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
                 </div>
 
                 <div class="redSocial">
                     <div class="imgRedSocial">
-                       <img src="img/instagramColor.png" class="iconos" alt="Instagram">
+                        <img src="img/instagramColor.png" class="iconos" alt="Instagram">
                     </div>
                     <div class="txtRedSocial">
-                       <a href=""><img src="img/dedo-click.png" class="dedoClick" alt="imagen dedo haciendo click"> - Instagram</a>
-                    </div>
-                    
-                    <div class="imgRedSocial">
-                       <img src="img/facebookColor.png" class="iconos" alt="Facebook">
-                    </div>
-
-                    <div class="txtRedSocial">
-                       <a href=""><img src="img/dedo-click.png" class="dedoClick" alt="imagen dedo haciendo click"> - Facebook</a>
+                        <a href=""><img src="img/dedo-click.png" class="dedoClick" alt="imagen dedo haciendo click"> -
+                            Instagram</a>
                     </div>
 
                     <div class="imgRedSocial">
-                       <img src="img/linkedinColor.png" class="iconos" alt="LinkedIn">
+                        <img src="img/facebookColor.png" class="iconos" alt="Facebook">
                     </div>
 
                     <div class="txtRedSocial">
-                       <a href=""><img src="img/dedo-click.png" class="dedoClick" alt="imagen dedo haciendo click"> - LinkedIn</a>
-                    </div>                    
+                        <a href=""><img src="img/dedo-click.png" class="dedoClick" alt="imagen dedo haciendo click"> -
+                            Facebook</a>
+                    </div>
+
+                    <div class="imgRedSocial">
+                        <img src="img/linkedinColor.png" class="iconos" alt="LinkedIn">
+                    </div>
+
+                    <div class="txtRedSocial">
+                        <a href=""><img src="img/dedo-click.png" class="dedoClick" alt="imagen dedo haciendo click"> -
+                            LinkedIn</a>
+                    </div>
                 </div>
             </div>
         </section>
 
+
+        <footer class="bg-dark">
+            <div class="boxFooter">
+                <div class="boxFooterTxt">
+                    <span>Derechos reservados - Cllínica JMR - 2021</span>
+                </div>
+                <div class="boxFooterImg">
+                    <img class="imgFooter" src="img/facebook.png" alt="">
+                    <img class="imgFooter" src="img/instagram.png" alt="">
+                    <img class="imgFooter" src="img/linkedin.png" alt="">
+                    <img class="imgFooter" src="img/twitter.png" alt="">
+                </div>
+            </div>
+        </footer>
     </main>
-    <footer class="bg-dark">
-        <div class="boxFooter">
-            <div class="boxFooterTxt">
-                <span>Derechos reservados - Cllínica JMR - 2021</span>
-            </div>
-            <div class="boxFooterImg">
-                <img class="imgFooter" src="img/facebook.png" alt="">
-                <img class="imgFooter" src="img/instagram.png" alt="">
-                <img class="imgFooter" src="img/linkedin.png" alt="">
-                <img class="imgFooter" src="img/twitter.png" alt="">
-            </div>
-        </div>
-    </footer>
-
-    <script src="../bootstrap-5.1.0-dist/js/bootstrap.js"></script>
-</body>
-
-</html>footer>
-
     <script src="../bootstrap-5.1.0-dist/js/bootstrap.js"></script>
 </body>
 
