--- a/j_especialidades.html
+++ b/j_especialidades.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- CSS only -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
     <link rel="stylesheet" href="../bootstrap-5.1.0-dist/css/bootstrap.css">
     <link rel="stylesheet" href="css/estilos.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -61,13 +63,52 @@
             <div class="tituloAlineado">
                 <h1>Bienvenido a Clínica JMR</h1>
             </div>
-            <div class="wave" style="height: 150px; overflow: hidden;" ><svg viewBox="0 0 500 150" preserveAspectRatio="none" style="height: 100%; width: 100%;"><path d="M-4.79,36.02 C148.69,152.45 330.41,152.45 502.54,38.97 L501.41,154.44 L0.00,150.00 Z" style="stroke: none; fill: white;"></path></svg></div>
+            <div class="wave" style="height: 150px; overflow: hidden;"><svg viewBox="0 0 500 150"
+                    preserveAspectRatio="none" style="height: 100%; width: 100%;">
+                    <path d="M-4.79,36.02 C148.69,152.45 330.41,152.45 502.54,38.97 L501.41,154.44 L0.00,150.00 Z"
+                        style="stroke: none; fill: white;"></path>
+                </svg></div>
         </div>
     </header>
     <main>
         <section>
             <div>
+                <div class="list-group">
+                    <a href="#" class="list-group-item list-group-item-action active" aria-current="true">
+                        The current link item
+                    </a>
+                    <a href="#" class="list-group-item list-group-item-action">A second link item</a>
+                    <a href="#" class="list-group-item list-group-item-action">A third link item</a>
+                    <a href="#" class="list-group-item list-group-item-action">A fourth link item</a>
+                    <a class="list-group-item list-group-item-action disabled">A disabled link item</a>
+                </div>
 
+                <div class="list-group">
+                    <button type="button" class="list-group-item list-group-item-action active" aria-current="true">
+                        The current button
+                    </button>
+                    <button type="button" class="list-group-item list-group-item-action">A second item</button>
+                    <button type="button" class="list-group-item list-group-item-action">A third button item</button>
+                    <button type="button" class="list-group-item list-group-item-action">A fourth button item</button>
+                    <button type="button" class="list-group-item list-group-item-action" disabled>A disabled button
+                        item</button>
+                </div>
+
+                <button type="button" class="btn btn-primary" id="liveToastBtn">Show live toast</button>
+
+                <div class="position-fixed bottom-0 end-0 p-3" style="z-index: 11">
+                    <div id="liveToast" class="toast" role="alert" aria-live="assertive" aria-atomic="true">
+                        <div class="toast-header">
+                            <img src="..." class="rounded me-2" alt="...">
+                            <strong class="me-auto">Bootstrap</strong>
+                            <small>11 mins ago</small>
+                            <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
+                        </div>
+                        <div class="toast-body">
+                            Hello, world! This is a toast message.
+                        </div>
+                    </div>
+                </div>
             </div>
         </section>
 
@@ -82,11 +123,23 @@
 
             </div>
         </section>
-        <footer>
-            
+        <footer class="bg-dark">
+            <div class="boxFooter">
+                <div class="boxFooterTxt">
+                    <span>Derechos reservados - Cllínica JMR - 2021</span>
+                </div>
+                <div class="boxFooterImg">
+                    <img class="imgFooter" src="img/facebook.png" alt="">
+                    <img class="imgFooter" src="img/instagram.png" alt="">
+                    <img class="imgFooter" src="img/linkedin.png" alt="">
+                    <img class="imgFooter" src="img/twitter.png" alt="">
+                </div>
+            </div>
         </footer>
     </main>
-  
+    <!-- JavaScript Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous"></script>
+    <script src="../bootstrap-5.1.0-dist/js/bootstrap.js"></script>
 </body>
 
 </html>
